# python_web_conf_2023

./: .gitignore  AUTHORS  README.rst  pyproject.toml
slides/: 00_talking.py  01_engine_usage.py  02_metadata.py  03_inserts.py  03_sql_basic.py  04_selects.py  05_orm.py  06_orm_relationships.py  _config.py
