[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy_mini_tutorial_2023"
version = "0.0.1"
authors = [{ name = "Mike Bayer", email = "mike_mp@zzzcomputing.com" }]
description = "SQLAlchemy 2.0 - Let's Talk"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy==2.0.2",
    "sliderepl @ https://github.com/zzzeek/sliderepl/archive/refs/heads/master.zip",
    "pygments",
]

[tool.setuptools.packages.find]
exclude = ["*"]

[tool.sliderepl]
slides = "slides"

[project.urls]
"Homepage" = "https://github.com/zzzeek/sqla_mini_tutorial"

